--- a/css/styles.css
+++ b/css/styles.css
@@ -13,9 +13,9 @@
   --btn-clr: #f5f4fa;
 }
 
-.page,
-.body {
+body {
   font-family: 'Roboto', sans-serif;
+  font-size: 14px;
   letter-spacing: 0.03em;
   background: var(--background-color);
   color: var(--primary-text-color);
@@ -32,7 +32,7 @@
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 26px;
-  line-height: 1, 20;
+  line-height: 1.20;
   color: var(--accent-color);
 }
 
@@ -40,7 +40,7 @@
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 26px;
-  line-height: 1, 20;
+  line-height: 1.20;
   text-decoration: none;
   color: var(--logo-color);
 }
@@ -49,8 +49,7 @@
 
 .list-nav .link {
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1, 14;
+  line-height: 1.14;
   color: var(--title-text-color);
 }
 
@@ -59,7 +58,9 @@
 .list-header .link:hover,
 .list-header .link:focus,
 .list-footer .link:hover,
-.list-footer .link:focus {
+.list-footer .link:focus,
+.link.active
+{
   color: var(--accent-color);
 }
 
@@ -67,8 +68,7 @@
 
 .list-header .link {
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1, 14;
+  line-height: 1.14;
   color: var(--primary-text-color);
 }
 
@@ -81,16 +81,18 @@
 .hero-title {
   font-weight: 900;
   font-size: 44px;
-  line-height: 1, 4;
+  line-height: 1.4;
+  letter-spacing: 0.06em;
   color: var(--background-color);
   text-align: center;
+  text-transform: uppercase;
 }
 
 .btn-hero {
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
-  line-height: 1, 8;
+  line-height: 1.8;
   background-color: var(--accent-color);
   color: var(--background-color);
 }
@@ -101,16 +103,12 @@
 }
 
 .features .title {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1, 14;
+  line-height: 1.14;
   color: var(--title-text-color);
 }
 
 .features .text {
-  font-size: 14px;
-  line-height: 1, 7;
-  color: var(--primary-text-color);
+  line-height: 1.7;
 }
 
 /* Our team */
@@ -126,23 +124,21 @@
 .section-team .title {
   font-weight: 500;
   font-size: 16px;
-  line-height: 1, 18;
+  line-height: 1.18;
   color: var(--title-text-color);
   text-align: center;
 }
 
 .section-team .text {
   font-size: 16px;
-  line-height: 1, 18;
-  color: var(--primary-text-color);
+  line-height: 1.18;
   text-align: center;
 }
 /* Sections style */
 
 .section-title {
-  font-weight: 700;
   font-size: 36px;
-  line-height: 1, 16;
+  line-height: 1.16;
   color: var(--title-text-color);
 }
 
@@ -156,7 +152,7 @@
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 26px;
-  line-height: 1, 2;
+  line-height: 1.2;
   color: var(--background-color);
 }
 
@@ -165,16 +161,14 @@
 .address {
   font-style: normal;
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1, 7;
+  line-height: 1.7;
   color: var(--background-color);
   padding-top: 20px;
   padding-left: 40px;
 }
 
 .list-footer .link {
-  font-size: 14px;
-  line-height: 1, 7;
+  line-height: 1.7;
   color: var(--background-color);
   color: rgba(255, 255, 255, 0.6);
 }
@@ -185,11 +179,12 @@
   cursor: pointer;
   font-weight: 500;
   font-size: 16px;
-  line-height: 1, 6;
+  line-height: 1.6;
   background-color: var(--btn-clr);
   color: var(--title-text-color);
 }
 
+.btn.active,
 .btn:hover,
 .btn:focus {
   background-color: var(--accent-color);
@@ -210,13 +205,13 @@
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
+  letter-spacing: 0.06em;
   color: var(--title-text-color);
 }
 
 .list-portfolio .text {
   font-size: 16px;
   line-height: 1.8;
-  color: var(--primary-text-color);
 }
 
 /* hide extra things */
